<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
        >
    <Button
            android:id="@+id/simple"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple"
            android:layout_marginTop="20dip"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:layout_marginTop="20dip"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:layout_marginTop="20dip"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            />


</LinearLayout>