<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSpace"
            android:layout_marginTop="20dip"
            />
    <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="25dip"
                  android:layout_gravity="center"
            >
        <TextView
                android:id="@+id/first"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:text="@string/txtFirstNumber"
                android:layout_marginRight="30dip"
                android:textColor="@color/text_color"
                android:background="@color/background_color"
                android:gravity="center"

                />
        <TextView
                android:id="@+id/second"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:text="@string/txtSecondNumber"
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:background="@color/background_color"
                android:gravity="center"

                />

    </LinearLayout>
    <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="25dip"
                  android:layout_marginTop="35dip"
                  android:layout_gravity="center"
            >
        <TextView
                android:id="@+id/third"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:text="@string/txtThirdNumber"
                android:layout_marginRight="30dip"
                android:textColor="@color/text_color"
                android:background="@color/background_color"
                android:gravity="center"

                />
        <TextView
                android:id="@+id/fourth"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:text="@string/txtFourthNumber"
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:background="@color/background_color"
                android:gravity="center"

                />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="35dip"
            android:layout_gravity="center"
            >
        <TextView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:text="a."
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:gravity="center"

                />
        <TextView
                android:id="@+id/cfirst"
                android:layout_width="40dip"
                android:layout_height="20dip"
                android:text="@string/txtChooseOne"
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:gravity="center"

                />

        <TextView

                android:layout_width="20dip"
                android:layout_height="20dip"
                android:text="b."
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:gravity="center"

                />
        <TextView
                android:id="@+id/csecond"
                android:layout_width="40dip"
                android:layout_height="20dip"
                android:text="@string/txtChooseTwo"
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:gravity="center"

                />
        <TextView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:text="c."
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:gravity="center"

                />
        <TextView
                android:id="@+id/cthird"
                android:layout_width="40dip"
                android:layout_height="20dip"
                android:text="@string/txtChooseThree"
                android:layout_marginRight="10dip"
                android:textColor="@color/text_color"
                android:gravity="center"

                />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dip"
                  >

        <TextView
                android:layout_width="50dip"
                android:layout_height="40dip"
                android:text="@string/ans"
                android:layout_marginRight="10dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/text_color"
                android:background="@color/background_color"
                android:gravity="center"
                android:layout_marginTop="4dip"

                />
        <EditText
                android:id="@+id/answer"
                android:maxLines="1"
                android:layout_width="100dip"
                android:layout_height="40dip"
                android:layout_marginTop="3dip"
                android:gravity="right"
                android:layout_marginBottom="2dip"
                />
        <TextView
                android:id="@+id/status"
                android:layout_width="20dip"
                android:layout_height="40dip"
                android:text="@string/stat"
                android:layout_marginRight="10dip"
                android:layout_marginLeft="10dip"
                android:gravity="center"
                android:layout_marginTop="4dip"
                android:textColor="@color/text_color"
                android:background="@color/background_color"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dip"
                  android:layout_marginRight="3dip"
            >
    <Button
            android:text="Retry"
            android:id="@+id/Button02"
            android:layout_width="88dip"
            android:layout_height="60dip"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="60dip"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:textColor="@color/botton_color"
            android:background="@color/bg_color">
    </Button>
    <Button
            android:text="Submit"
            android:id="@+id/Button01"
            android:layout_width="168dip"
            android:layout_height="60dip"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="20dip"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:textColor="@color/botton_color"
            android:background="@color/bg_color">
    </Button>
        </LinearLayout>
</LinearLayout>